--- a/Fun.AspNetCore.Mvc.Testing.Xunit/Fun.AspNetCore.Mvc.Testing.Xunit.csproj
+++ b/Fun.AspNetCore.Mvc.Testing.Xunit/Fun.AspNetCore.Mvc.Testing.Xunit.csproj
@@ -7,12 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Fun.AspNetCore.Mvc.Testing" Version="1.0.0" Condition="'$(Configuration)' == 'Release'" />
 		<PackageReference Include="MartinCostello.Logging.XUnit" Version="0.1.0" />
 		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Fun.AspNetCore.Mvc.Testing\Fun.AspNetCore.Mvc.Testing.csproj" />
+		<ProjectReference Include="..\Fun.AspNetCore.Mvc.Testing\Fun.AspNetCore.Mvc.Testing.csproj" Condition="'$(Configuration)' != 'Release'" />
 	</ItemGroup>
 
 </Project>
